--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,30 @@
     <string name="sign_up">Sign up</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="welcome">Welcome</string>
+    <string name="ok">OK</string>
+    <string name="view_map">查看地圖</string>
+    <string name="explore">探索</string>
+    <string name="find_friends">尋找好友</string>
+    <string name="signal_type_1">道路结冰</string>
+    <string name="signal_type_2">暴雪</string>
+    <string name="signal_type_3">暴雨</string>
+    <string name="signal_type_4">冰雹</string>
+    <string name="signal_type_5">大风</string>
+    <string name="signal_type_6">大雾</string>
+    <string name="signal_type_7">高温</string>
+    <string name="signal_type_8">干旱</string>
+    <string name="signal_type_9">寒潮</string>
+    <string name="signal_type_10">雷电</string>
+    <string name="signal_type_11">霾</string>
+    <string name="signal_type_12">沙尘暴</string>
+    <string name="signal_type_13">霜冻</string>
+    <string name="signal_type_14">台风</string>
+    <string name="signal_type_15">道路冰雪</string>
+    <string name="signal_type_16">海上大风</string>
+    <string name="signal_type_17">寒冷</string>
+    <string name="signal_type_18">森林火险</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
