--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="password">Password</string>
     <string name="welcome">Welcome</string>
     <string name="ok">OK</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
     <string name="view_map">查看地圖</string>
     <string name="explore">探索</string>
     <string name="find_friends">尋找好友</string>
@@ -34,4 +36,14 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="label_sign_up">Sign up</string>
+    <string name="hint_username">Username</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_reenter_password">Reenter password</string>
+    <string name="hint_resident_id">Resident ID</string>
+    <string name="hint_first_name">First name</string>
+    <string name="hint_last_name">Last name</string>
+    <string name="hint_phone_number">Phone number</string>
+    <string name="submit">Submit</string>
+    <string name="or">Or</string>
 </resources>
