Add post activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,24 +15,44 @@
     <string name="view_map">查看地圖</string>
     <string name="explore">探索</string>
     <string name="find_friends">尋找好友</string>
-    <string name="signal_type_1">道路结冰</string>
-    <string name="signal_type_2">暴雪</string>
-    <string name="signal_type_3">暴雨</string>
-    <string name="signal_type_4">冰雹</string>
-    <string name="signal_type_5">大风</string>
-    <string name="signal_type_6">大雾</string>
-    <string name="signal_type_7">高温</string>
-    <string name="signal_type_8">干旱</string>
-    <string name="signal_type_9">寒潮</string>
-    <string name="signal_type_10">雷电</string>
-    <string name="signal_type_11">霾</string>
-    <string name="signal_type_12">沙尘暴</string>
-    <string name="signal_type_13">霜冻</string>
-    <string name="signal_type_14">台风</string>
-    <string name="signal_type_15">道路冰雪</string>
-    <string name="signal_type_16">海上大风</string>
-    <string name="signal_type_17">寒冷</string>
-    <string name="signal_type_18">森林火险</string>
+<!--    <string name="signal_type_1">道路结冰</string>-->
+<!--    <string name="signal_type_2">暴雪</string>-->
+<!--    <string name="signal_type_3">暴雨</string>-->
+<!--    <string name="signal_type_4">冰雹</string>-->
+<!--    <string name="signal_type_5">大风</string>-->
+<!--    <string name="signal_type_6">大雾</string>-->
+<!--    <string name="signal_type_7">高温</string>-->
+<!--    <string name="signal_type_8">干旱</string>-->
+<!--    <string name="signal_type_9">寒潮</string>-->
+<!--    <string name="signal_type_10">雷电</string>-->
+<!--    <string name="signal_type_11">霾</string>-->
+<!--    <string name="signal_type_12">沙尘暴</string>-->
+<!--    <string name="signal_type_13">霜冻</string>-->
+<!--    <string name="signal_type_14">台风</string>-->
+<!--    <string name="signal_type_15">道路冰雪</string>-->
+<!--    <string name="signal_type_16">海上大风</string>-->
+<!--    <string name="signal_type_17">寒冷</string>-->
+<!--    <string name="signal_type_18">森林火险</string>-->
+    <string-array name="signal_type_array">
+        <item>道路结冰</item>
+        <item>暴雪</item>
+        <item>暴雨</item>
+        <item>冰雹</item>
+        <item>大风</item>
+        <item>大雾</item>
+        <item>高温</item>
+        <item>干旱</item>
+        <item>寒潮</item>
+        <item>雷电</item>
+        <item>霾</item>
+        <item>沙尘暴</item>
+        <item>霜冻</item>
+        <item>台风</item>
+        <item>道路冰雪</item>
+        <item>海上大风</item>
+        <item>寒冷</item>
+        <item>森林火险</item>
+    </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -46,4 +66,9 @@
     <string name="hint_phone_number">Phone number</string>
     <string name="submit">Submit</string>
     <string name="or">Or</string>
+    <string name="button_post">Post</string>
+    <string name="label_new_post">New post</string>
+    <string name="hint_message">Message</string>
+    <string name="people_num">People</string>
+    <string name="signal_level">Signal level</string>
 </resources>
