Add new signal type and fix a minor bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
         <item>道路冰雪</item>
         <item>海上大风</item>
         <item>寒冷</item>
+        <item>强对流</item>
         <item>森林火险</item>
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
